added host and port to mysql check in install script

--- a/laravel/demeter.config
+++ b/laravel/demeter.config
@@ -1,8 +1,9 @@
 #These configs are for the middleware's database
 DB_CONNECTION=mysql #mysql oracle or mongo
 DB_HOST=localhost
+DB_PORT=3306
 DB_USER=lara
 DB_PASSWORD=some_hash
 DB_DATABASE=demeterMiddleware
-PORT=8000
+MIDDLEWARE_PORT=8000
 
