--- a/laravel/public/demeter/bower.json
+++ b/laravel/public/demeter/bower.json
@@ -23,6 +23,7 @@
     "iron-ajax": "PolymerElements/iron-ajax#~1.1.1",
     "paper-progress": "PolymerElements/paper-progress#~1.0.8",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.1.3",
-    "paper-item": "PolymerElements/paper-item#~1.1.3"
+    "paper-item": "PolymerElements/paper-item#~1.1.3",
+    "google-chart": "GoogleWebComponents/google-chart#~1.0.4"
   }
 }
