--- a/laravel/public/demeter/bower.json
+++ b/laravel/public/demeter/bower.json
@@ -24,6 +24,7 @@
     "paper-progress": "PolymerElements/paper-progress#~1.0.8",
     "paper-dropdown-menu": "PolymerElements/paper-dropdown-menu#~1.1.3",
     "paper-item": "PolymerElements/paper-item#~1.1.3",
-    "google-chart": "GoogleWebComponents/google-chart#~1.0.4"
+    "google-chart": "GoogleWebComponents/google-chart#~1.0.4",
+    "paper-spinner": "PolymerElements/paper-spinner#~1.1.1"
   }
 }
