--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,15 +1,17 @@
 APP_ENV=local
-APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_DEBUG=false
+APP_KEY=7CIbmJiz2RlI8zon2Lpp7wB8eRAAXFrK
 
 DB_HOST=localhost
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=demeterMiddleware
+DB_USERNAME=lara
+DB_PASSWORD=[PASSWORD]
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
-QUEUE_DRIVER=sync
+QUEUE_DRIVER=redis
+
+REDIS_HOST=[REDIS IP]
 
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
